--- a/peak_project/requirements.txt
+++ b/peak_project/requirements.txt
@@ -12,7 +12,7 @@ itypes==1.1.0
 Jinja2==2.11.1
 Markdown==3.1.1
 MarkupSafe==1.1.1
-psycopg2==2.8.4
+psycopg2-binary==2.8.4
 pytz==2019.3
 requests==2.22.0
 sqlparse==0.3.0
